test/log/arithmetic/vwmul_vv_i16.txt
vwmul_vv_i16.c:10:2: warning: multi-line comment [-Wcomment]
   10 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vwmul_vv_i16.c:12:44: warning: backslash and newline separated by space
   12 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vwmul_vv_i16.c:31:6: warning: no previous prototype for 'vwmul_vv_i16_golden' [-Wmissing-prototypes]
   31 | void vwmul_vv_i16_golden(int16_t *a,int16_t *b,int32_t exp_result[][ELE_NUM]) {
      |      ^~~~~~~~~~~~~~~~~~~
vwmul_vv_i16.c: In function 'vwmul_vv_i16_golden':
vwmul_vv_i16.c:33:23: error: assignment to expression with array type
   33 |         exp_result[i] = a[i]*b[i];
      |                       ^
vwmul_vv_i16.c: In function 'main':
vwmul_vv_i16.c:53:37: warning: passing argument 3 of 'vwmul_vv_i16_golden' from incompatible pointer type [-Wincompatible-pointer-types]
   53 |     vwmul_vv_i16_golden(exp_a,exp_b,exp_result);
      |                                     ^~~~~~~~~~
      |                                     |
      |                                     int32_t (*)[16] {aka long int (*)[16]}
vwmul_vv_i16.c:31:56: note: expected 'int32_t (*)[32]' {aka 'long int (*)[32]'} but argument is of type 'int32_t (*)[16]' {aka 'long int (*)[16]'}
   31 | void vwmul_vv_i16_golden(int16_t *a,int16_t *b,int32_t exp_result[][ELE_NUM]) {
      |                                                ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
vwmul_vv_i16.c:60:35: error: subscripted value is neither array nor pointer nor vector
   60 |         if(exp_result[i] != result[i]) {
      |                                   ^
vwmul_vv_i16.c:61:79: error: subscripted value is neither array nor pointer nor vector
   61 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                                               ^
vwmul_vv_i16.c:46:18: warning: variable 'result' set but not used [-Wunused-but-set-variable]
   46 |     int32x16x2_t result = {0};
      |                  ^~~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwmul_vv_i16.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vwmul_vv_i16"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vwmul_vv_i16.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwmul_vv_i16.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed